# kestra-elt-pipeline

./: .devcontainer.json  .flake8  .gitignore  .sqlfluff  .sqlfluffignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: clear-gh-cache.yml  run-dbt-ci.yml  run-dbt-deploy.yml  run-python-ci.yml  run-python-deploy.yml  terraform-apply.yml  terraform-plan.yml
dbt/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt/macros/: qualify_partition_by.sql
dbt/models/staging/landing_dataset/: src__landing_dataset.yml  stg__landing_dataset_character_table.sql  stg__landing_dataset_character_table.yml  stg__landing_dataset_episode_table.sql  stg__landing_dataset_episode_table.yml  stg__landing_dataset_location_table.sql  stg__landing_dataset_location_table.yml
kestra_workflows/: rick_and_morty_pipeline.yml
src/core/: settings.py
src/core/contrib/rick_and_morty/: models.py  rick_and_morty.py
src/core/utils/: jsonl.py  logger.py
src/integrations/rick_and_morty/: constants.py  fetch_data.py  main.py
terraform/: .terraform.lock.hcl  main.tf  variables.tf
terraform/bq_table_schemas/: character.json  episode.json  location.json
