[tool.black]
target-version = ["py311"]

[tool.isort]
line_length = 88
profile = "black"
skip_glob=[".venv/*", "**/dbt_packages/*"]

[project]
authors = [
    {name = "Jack P"},
]
requires-python = "<3.12,>=3.11"
dependencies = [
    "dbt-core<2.0.0,>=1.9.0",
    "dbt-bigquery<2.0.0,>=1.9.0",
    "kestra>=0.21.13",
    "requests>=2.32.3",
    "pydantic>=2.10.6",
    "google-cloud-storage>=2.19.0",
    "pytz>=2025.1",
]
name = "kestra-elt-pipeline"
version = "0.1.0"
description = "Kestra ELT pipeline that shows example ELT pipeline with connection to Rick and Morty API."
readme = "README.md"

[dependency-groups]
file_linters = [
    "black<24.0.0,>=23.3.0",
    "flake8<7.0.0,>=6.0.0",
    "isort<6.0.0,>=5.12.0",
    "sqlfluff<4.0.0,>=3.2.5",
    "sqlfluff-templater-dbt<4.0.0,>=3.2.5",
]
sqlfluff_ci = [
    "dbt-core<2.0.0,>=1.9.0",
    "dbt-bigquery<2.0.0,>=1.9.0",
    "sqlfluff<4.0.0,>=3.2.5",
    "sqlfluff-templater-dbt<4.0.0,>=3.2.5",
]
dbt_image = [
    "dbt-core<2.0.0,>=1.9.0",
    "dbt-bigquery<2.0.0,>=1.9.0",
]
